--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <img src="sathiya.jpeg" alt="Its sathiya priyan">
     <h2>SATHIYA PRIYAN</h2>
     <p>Email to:<a href="mailto:sathiyapriyan608@gmail.com">sathiyapriyan608@gmail.com</a><br>
-       phn:9791307977<br>
+       phn:1234567895<br>
        1/A1, Agraharam Street,<br>
-       Dharmapuri main road Omalur,<br>
-       Salem, Tamil Nadu-636455<br>
+       main road Omalur,<br>
+       Salem, Tamil Nadu-123456<br>
     </p>
     <h3 style="color: rgb(9, 17, 92);"> OBJECTIVE</h3>
     <p>Seeking a quality environment where my knowledge can be shared and enriched.
